DuPont DevSB/src/objects/ERP_Material_Conversion_Factor__c.object
<CustomObject>
    <description>Contains material conversion factors of Material records, as stored in SAP</description>
    <fields>
        <fullName>Alternative_UOM_Text__c</fullName>
        <description>Alternative unit of measure for stock keeping unit.</description>
        <label>Alternative UOM Text</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternative_UOM__c</fullName>
        <description>Alternative unit of measure for stock keeping unit.</description>
        <label>Alternative UOM</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Base_UOM_Text__c</fullName>
        <description>Describes the lowest level unit of measure that would be reasonably handled. This is directly linked to the profit center UOM for materials with a profit center.</description>
        <label>Base UOM Text</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Base_UOM__c</fullName>
        <description>Describes the lowest level unit of measure that would be reasonably handled. This is directly linked to the profit center UOM for materials with a profit center.</description>
        <label>Base UOM</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Denominator_X__c</fullName>
        <description>Denominator for conversion to base units of measure</description>
        <label>Denominator (X)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ERP_ID__c</fullName>
        <description>Combination of Material.External_ERP_ID__c + Base UOM to identify a unique record</description>
        <externalId>true</externalId>
        <label>External ERP ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Material__c</fullName>
        <description>Identifies the Material record that this ERP Material Conversion Factor record belongs to</description>
        <label>Material</label>
        <referenceTo>Material__c</referenceTo>
        <relationshipLabel>ERP Material Conversion Factors</relationshipLabel>
        <relationshipName>Material_Conversion_Factors</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Numerator_Y__c</fullName>
        <description>Numerator for Conversion to Base Units of Measure</description>
        <label>Numerator (Y)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>ERP Material Conversion Factor</label>
    <nameField>
        <displayFormat>MCF-{0000000000}</displayFormat>
        <label>ERP Material Conversion Factor Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ERP Material Conversion Factors</pluralLabel>
    <recordTypes>
        <fullName>Material_Conversion_Factor</fullName>
        <active>true</active>
        <description>Material Conversion Factor</description>
        <label>Material Conversion Factor</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>